# stc

./: README.md  pyproject.toml  stc.py
