[project]
name = "stc"
version = "0.0.1"
authors = [
  { name="Curtis Lee Bolin", email="CurtisLeeBolin@gmail.com" },
]
description = "Subdirectory TransCoder - Batch transcodes Audio Video files to HEVC/AAC/MP4."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CurtisLeeBolin/stc"
"Bug Tracker" = "https://github.com/CurtisLeeBolin/stc/issues"

[project.scripts]
stc = "stc:main"
